More dark mode bug fixes

--- a/src/components/language-selector/language-selector.css
+++ b/src/components/language-selector/language-selector.css
@@ -10,8 +10,12 @@
     user-select: none;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: .875rem;
-    color: $text-primary;
+    color: $text-primary-light;
     background: $ui-white;
+}
+[theme="dark"] .language-select {
+    color: $ui-white;
+    background: $ui-primary;
 }
 
 [dir="ltr"] .language-select {
